# Pneumopress-

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  pneumopress.sln
C3D/: .gitignore
CreateInstaller/: CreateInstaller.iss  CreateInstallerFull.ps1  Deploy.bat
GOST/: Винт А.М8-6gx16 ГОСТ 11074-93.step  Винт А.М8-6gx35 ГОСТ 11074-93.step  Винт А2.М6-6gx10 ГОСТ 17473-80.step  Винт М14-6gx25 ГОСТ 11738-84.step  Винт М8-6gx55 ГОСТ 11738-84.step  Гайка М10-6H ГОСТ Р 50592-93.step  Гайка М16-6H ГОСТ 5915-70.step  Гайка М20-6H ГОСТ 5916-70.step  Гайка М8-6H ГОСТ 5915-70.step  Кольцо A17.50 ХГА ГОСТ 13942-86.step  Кольцо A20.50 ХГА ГОСТ 13942-86.step  Кольцо C16.50 ХГА ГОСТ 13942-86.step
PneumocylinderConfigurator/: BuildMathModel.cpp  BuildMathModel.h  BuildParams.h  Build_Assembly.cpp  Build_Base.cpp  Build_Bolt.cpp  Build_Brass_Collar.cpp  Build_Clamping_Bar.cpp  Build_Create_O_Ring.cpp  Build_Main_Body.cpp  Build_Seal_Housing.cpp  Build_Shaft.cpp  Build_ShaftPivot.cpp  Build_Socket_Head_Collar.cpp  Build_Top_Guide.cpp  CMakeLists.txt  FileController.cpp  FileController.h  GHOST.cpp  Konfiguration1.cpp  Konfiguration2.cpp  Konfiguration3.cpp  Konfiguration4.cpp  LIS.ME22.3.002.00.001 (Вилка).cpp  LIS.ME22.3.002.00.002 (Ползун).cpp  LIS.ME22.3.002.00.003 (Раздвижная тяга).cpp  LIS.ME22.3.002.00.004 (Стойка).cpp  LIS.ME22.3.002.00.005 (Опора Цилиндра).cpp  LIS.ME22.3.002.00.006 (Кронштейн цапфы).cpp  LIS.ME22.3.002.00.007 (Направляющая ползуна).cpp  LIS.ME22.3.002.00.009 (Прокладка).cpp  LIS.ME22.3.002.00.010 (Шатун Скользящий).cpp  LIS.ME22.3.002.00.011 (Кронштейн регулировочный).cpp  LIS.ME22.3.002.00.012 (Штифт 16).cpp  LIS.ME22.3.002.00.013 (Прокладка направляющей ползуна).cpp  LIS.ME22.3.002.00.014 (Прокладка ползуна).cpp  LIS.ME22.3.002.00.015 (Болт крепежный).cpp  LIS.ME22.3.002.00.016 (Стол).cpp  LIS.ME22.3.002.00.08 (Втулка самосмазывающая).cpp  LIS.ME22.3.002.00.XXX (Стол).cpp  (+34 more)
QtVision/: CMakeLists.txt  QtVision.vcxproj  QtVision.vcxproj.filters
QtVision/Include/: qt_aboutscenewidget.h  qt_cursors.h  qt_licensewnd.h  qt_openglcontext.h  qt_openglwidget.h  qt_openglwidgetprivate.h  qt_resstream.h  qt_visiondef.h
QtVision/src/: qt_aboutscenewidget.cpp  qt_cursors.cpp  qt_licensewnd.cpp  qt_openglcontext.cpp  qt_openglwidget.cpp  qt_openglwidget.qrc
enc_temp_folder/348ab97a9deb177e611696c94cc97df/: Build_Assembly.cpp
деталиИмпорт/: Болт 4М10-6gx35 ГОСТ 7798-70.step  Винт А.М8-6gx12 ГОСТ 11074-93.step  Винт А.М8-6gx20 ГОСТ 11074-93.step  Винт М10-6gx45 ГОСТ 11738-84.step  Гайка М8-6H ГОСТ 5916-70.step  Шайба A.14.37 ГОСТ 11371-78.step
